# philou

./: .gitignore  TODO
C/: balls  balls.cpp  rotation  rotation.cpp
Haskell/: BinaryTree.hs  CPS.hs  EitherString.hs  FileRead.hs  Guess.hs  List.hs  Main.hs  Monads.hs  Name.hs  Number.hs  PFree.hs  ReFoldr.hs  Test.hs  Test.txt  Triple.hs  Tuple.hs
Ruby/AnimalQuiz/: AnimalQuiz.rb  AnimalQuizTest.rb  PlayAnimalQuiz.rb  english.animals.db  french.animals.db  spike.rb
Ruby/GEDCOMParser/: GEDCOMParser.rb  GEDCOMParserTest.rb
Ruby/LCDNumbers/: DisplayLCDNumbers.rb  LCDNumbers.rb  LCDNumbersTest.rb
Ruby/MadLibs/: MadLibs.rb  MadLibsTest.rb  PlayMadLibs.rb
Ruby/qt/: ActionOpenHandler.rb  Wizard.rb  t1.rb  t2.rb  t3.rb  t4.rb  t5.rb  t6.rb
Scheme/: intervals.scm  trees.scm
erlang/: .gitignore  geometry.erl  helloworld_tk.erl  ring.erl  shop.erl  spawn_register.erl
erlang/RayTracer/: Makefile  colors.erl  edoc-info  image.erl  make.erl  polynoms.erl  raytracer.erl  raytracer_impl.erl  records.hrl  tests.erl  vectors.erl
erlang/irc/: .codepath  .project  Makefile  bict.erl  chat.erl  client.erl  edoc-info  gui.erl  make.erl  room.erl  tests.erl  todo.txt  utils.erl
erlang/pinger/: serv.erl
javascript/spike/: Buildfile  README
javascript/tetris/: README
javascript/todos/: Buildfile
lisp/: .gitignore  load.lisp
opengl/isiviewer/: .project  CMakeLists.txt
opengl/isiviewer/src/: CMakeLists.txt  Doxyfile  isiviewer.c  isiviewer.h  objects.c  objects.h
opengl/isiviewerCpp/: .project  .qglviewer.xml  Doxyfile  GLFunctor.cpp  (+23 more)
python/: tictactoe.py
(+139 files in other folders)
